updated documentation on how to set shots with the `set_shots` transform

--- a/doc/FR/prise_en_main.ipynb
+++ b/doc/FR/prise_en_main.ipynb
@@ -109,7 +109,6 @@
     "dev = qml.device(\n",
     "    \"monarq.default\",\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     "    wires=3,  # celà définira les qubits [0, 1, 2], soit 3 qubits\n",
     ")\n",
     "\n",
@@ -117,7 +116,6 @@
     "dev = qml.device(\n",
     "    \"monarq.default\",\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     "    wires=[4, 1, 5],  # celà définira les qubits [4, 1, 5]\n",
     ")\n",
     "\n",
@@ -125,7 +123,6 @@
     "dev = qml.device(\n",
     "    \"monarq.default\",\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     ")"
    ]
   },
@@ -162,6 +159,7 @@
    ],
    "source": [
     "# Cette ligne indique que la fonction qui suit est une fonction quantique (un qnode)\n",
+    "@qml.set_shots(1000)\n",
     "@qml.qnode(dev)\n",
     "# Ceci est votre fonction quantique. Elle sera utilisée plus tard pour exécuter votre circuit\n",
     "def circuit():\n",
