--- a/doc/for_developers/job_events.ipynb
+++ b/doc/for_developers/job_events.ipynb
@@ -29,7 +29,7 @@
     "    access_token=\"your access token\",\n",
     "    project_id=\"your project id\",\n",
     ")\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)"
+    "dev = qml.device(\"monarq.default\", client=my_client)"
    ]
   },
   {
@@ -100,6 +100,7 @@
     }
    ],
    "source": [
+    "@qml.set_shots(1000)\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
     "    qml.X(0)\n",
