--- a/doc/for_developers/using_configurations.ipynb
+++ b/doc/for_developers/using_configurations.ipynb
@@ -41,7 +41,7 @@
     ")\n",
     "\n",
     "# no config passed in arguments = config = MonarqDefaultConfig\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client=my_client)"
+    "dev = qml.device(\"monarq.default\", client=my_client)"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "dev = qml.device(\n",
-    "    \"monarq.default\", shots=1000, client=my_client, processing_config=custom_config\n",
+    "    \"monarq.default\", client=my_client, processing_config=custom_config\n",
     ")"
    ]
   },
@@ -254,14 +254,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev = qml.device(\"monarq.default\", shots=1000, client=my_client)\n",
+    "dev = qml.device(\"monarq.default\", client=my_client)\n",
     "\n",
     "# the former is the same as doing the latter\n",
     "\n",
     "my_config = MonarqDefaultConfig(\"yamaska\")\n",
     "\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", shots=1000, client=my_client, processing_config=my_config\n",
+    "    \"monarq.default\", client=my_client, processing_config=my_config\n",
     ")"
    ]
   }
