--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -530,10 +530,11 @@
     "from pennylane_calculquebec.processing.steps import PrintTape, PrintWires, PrintResults\n",
     "\n",
     "# 1. Create a device with shots enabled\n",
-    "dev = qml.device(\"default.qubit\", wires=2, shots=10)\n",
+    "dev = qml.device(\"default.qubit\", wires=2)\n",
     "\n",
     "\n",
     "# 2. Define a circuit\n",
+    "@qml.set_shots(10)\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
     "    qml.Hadamard(wires=0)\n",
@@ -557,7 +558,7 @@
     "print_wires.execute(tape)\n",
     "\n",
     "# 6. Execute the tape\n",
-    "results = qml.execute([tape], dev)[0]  # no shots=10 here\n",
+    "results = qml.execute([tape], dev)[0]\n",
     "\n",
     "# 7. Format results as counts\n",
     "import collections\n",
@@ -663,7 +664,7 @@
     ")\n",
     "\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, processing_config=my_config, shots=1000\n",
+    "    \"monarq.default\", client=my_client, processing_config=my_config\n",
     ")\n",
     "\n",
     "dev.circuit_name = \"your circuit\"\n",
@@ -675,6 +676,7 @@
     "\n",
     "\n",
     "# a simple ghz circuit\n",
+    "@qml.set_shots(1000)\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
     "    qml.Hadamard(wires=0)\n",
