--- a/doc/for_developers/using_different_backends.ipynb
+++ b/doc/for_developers/using_different_backends.ipynb
@@ -39,9 +39,9 @@
     "    project_id=\"your project id\",\n",
     ")\n",
     "\n",
-    "qml.device(\"monarq.default\", wires=4, client=my_client, shots=1000)\n",
-    "qml.device(\"monarq.sim\", wires=4, client=my_client, shots=1000)\n",
-    "qml.device(\"monarq.backup\", wires=4, client=my_client, shots=1000)"
+    "qml.device(\"monarq.default\", wires=4, client=my_client)\n",
+    "qml.device(\"monarq.sim\", wires=4, client=my_client)\n",
+    "qml.device(\"monarq.backup\", wires=4, client=my_client)"
    ]
   },
   {
@@ -81,7 +81,6 @@
     "    \"monarq.default\",\n",
     "    wires=4,\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     "    processing_config=config_yamaska,\n",
     ")\n",
     "\n",
@@ -92,7 +91,6 @@
     "    \"monarq.backup\",\n",
     "    wires=4,\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     "    processing_config=config_yamaska,\n",
     ")"
    ]
