--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -108,7 +108,6 @@
     "dev = qml.device(\n",
     "    \"monarq.default\",\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     "    wires=3,  # this will set wires = [0, 1, 2]. ie 3 wires\n",
     ")\n",
     "\n",
@@ -116,7 +115,6 @@
     "dev = qml.device(\n",
     "    \"monarq.default\",\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     "    wires=[4, 1, 5],  # this will set wires = [4, 1, 5]\n",
     ")\n",
     "\n",
@@ -124,7 +122,6 @@
     "dev = qml.device(\n",
     "    \"monarq.default\",\n",
     "    client=my_client,\n",
-    "    shots=1000,\n",
     ")"
    ]
   },
@@ -151,6 +148,7 @@
    "outputs": [],
    "source": [
     "# this line indicates that the function underneath is a quantum function (qnode)\n",
+    "@qml.set_shots(1000)\n",
     "@qml.qnode(dev)\n",
     "# this is the name of your quantum function. It will be used later for executing your circuit\n",
     "def circuit():\n",
