--- a/doc/for_developers/using_custom_gates.ipynb
+++ b/doc/for_developers/using_custom_gates.ipynb
@@ -395,7 +395,7 @@
     "\n",
     "# create a device that uses the empty configuration\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", shots=1000, client=my_client, processing_config=config\n",
+    "    \"monarq.default\", client=my_client, processing_config=config\n",
     ")\n",
     "\n",
     "dev.circuit_name = \"your circuit\"\n",
@@ -410,6 +410,7 @@
     "# If we observe MonarQ's connectivity, we find that qubits 0 and 4 are adjacent\n",
     "# If we search online a bit, we find that Hadamard(i) is equivalent to RZ(pi/2, i) - RX(pi/2, i) - RZ(pi/2, i)\n",
     "# We also find that CNOT([i, j]) is equivalent to H(j) - CZ([i, j]) - H(j)\n",
+    "@qml.set_shots(1000)\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
     "\n",
