--- a/doc/for_developers/using_transpiler.ipynb
+++ b/doc/for_developers/using_transpiler.ipynb
@@ -48,7 +48,7 @@
     ")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=my_client)\n",
+    "dev = qml.device(\"monarq.default\", wires=[0, 1, 2], client=my_client)\n",
     "\n",
     "dev.circuit_name = \"your circuit\"\n",
     "dev.project = \"your project\"\n",
