--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -663,9 +663,7 @@
     "    project_id=\"your project id\",\n",
     ")\n",
     "\n",
-    "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, processing_config=my_config\n",
-    ")\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, processing_config=my_config)\n",
     "\n",
     "dev.circuit_name = \"your circuit\"\n",
     "dev.project = \"your project\"\n",
