--- a/doc/for_developers/using_configurations.ipynb
+++ b/doc/for_developers/using_configurations.ipynb
@@ -141,9 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, processing_config=custom_config\n",
-    ")"
+    "dev = qml.device(\"monarq.default\", client=my_client, processing_config=custom_config)"
    ]
   },
   {
@@ -260,9 +258,7 @@
     "\n",
     "my_config = MonarqDefaultConfig(\"yamaska\")\n",
     "\n",
-    "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, processing_config=my_config\n",
-    ")"
+    "dev = qml.device(\"monarq.default\", client=my_client, processing_config=my_config)"
    ]
   }
  ],
