--- a/doc/for_developers/using_custom_gates.ipynb
+++ b/doc/for_developers/using_custom_gates.ipynb
@@ -394,9 +394,7 @@
     "config = EmptyConfig()\n",
     "\n",
     "# create a device that uses the empty configuration\n",
-    "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, processing_config=config\n",
-    ")\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, processing_config=config)\n",
     "\n",
     "dev.circuit_name = \"your circuit\"\n",
     "dev.project = \"your project\"\n",
